# CrewAI-Devlopment-Team-Management-Project

./: README.md
dev_team_multi_agent/: README.md  pyproject.toml
dev_team_multi_agent/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
dev_team_multi_agent/src/dev_team_multi_agent/: main.py
dev_team_multi_agent/src/dev_team_multi_agent/config/: tasks.yaml
